--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "index.js",
       "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
