--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,17 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
+  ],
+  "rewrites": [],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://movie-app-ruddy-nine.vercel.app, http://localhost:5173" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
   ]
 }
