--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "index.js",
        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin":["https://movie-app-ruddy-nine.vercel.app","http://localhost:5173"],
+        "Access-Control-Allow-Origin":"https://movie-app-ruddy-nine.vercel.app",
       }
     }
   ]
