--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "https-proxy-agent": "^7.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.0.2",
     "serverless-http": "^3.2.0",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "start": "^5.1.0"
   }
 }
